Fix response data format
