# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/chat": {
             "post": {
-                "description": "add new chat",
+                "description": "Create new chat",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,10 +16,10 @@
                 "tags": [
                     "chat"
                 ],
-                "summary": "Add new chat",
+                "summary": "Create new chat",
                 "parameters": [
                     {
-                        "description": "Add chat",
+                        "description": "Create chat",
                         "name": "chat",
                         "in": "body",
                         "required": true,
@@ -28,6 +28,35 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ChatResponse"
+                        }
+                    },
+                    "400": {
+                        "description": ""
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/chat/active": {
+            "get": {
+                "description": "Get all active chats at the moment",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Get active chats",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -50,44 +79,9 @@
                 }
             }
         },
-        "/chat/active": {
-            "get": {
-                "description": "get all active chats at the moment",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "chat"
-                ],
-                "summary": "Get active chats",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/entity.ChatResponse"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": ""
-                    },
-                    "404": {
-                        "description": ""
-                    },
-                    "500": {
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/chat/{id}/message": {
             "get": {
-                "description": "get all messages in chat by chat id",
+                "description": "Get all messages in chat by chat id",
                 "produces": [
                     "application/json"
                 ],
@@ -110,10 +104,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/entity.MessageResponse"
-                                }
+                                "$ref": "#/definitions/entity.MessageResponse"
                             }
                         }
                     },
@@ -159,10 +150,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.MessageResponse"
-                            }
+                            "$ref": "#/definitions/entity.MessageResponse"
                         }
                     },
                     "400": {
@@ -210,7 +198,7 @@
         "entity.ChatResponse": {
             "type": "object",
             "properties": {
-                "author": {
+                "creator": {
                     "type": "string"
                 },
                 "id": {
